EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==09/23/2010==
Congdar: Bots can now equip multi slot items in the desired slot. The first available empty slot will get the item.

==09/13/2010==
JJ: Fix to prevent NPCs using death animation from facing target during EVENT_SAY and EVENT_ITEM
Derision: Fix for missing tradeskill objects etc in SoF and later clients.
Derision: Reverted stun resist changes.

==09/12/2010==
Derision: /guildstatus now works for SoD and UF.
Caryatis: Spells with a Melee Lifetap effect now cap the heal at the percentage specified in the spell data.
Caryatis: Work on stun resists.
Vanicae: Fix for potential world crash in online guild-member processing.

==09/11/2010==
Vanicae: Fix for guild management window updates
wheeljack: Fix for missing tradeskill favorites
Vanicae: Tribute Focus, SE_DivineSave, SE_Flurry, SE_Accuracy
wheeljack: Fix for losing items in world containers
pfyon: quest::createBot()
Derision: None potions that are potion belt enabled (mod rods etc) should now work from the potion belt when they are inside a bag.
Derision: Recast timers should now be honoured for clicky items with a single charge (e.g. Modulating Rod).
gaeorn: more fixes for newer gcc/glib

==09/08/2010==
gaeorn: fixes for new stricter version of gcc/glib

==09/08/2010==
JJ: ChannelMessageSend in Client now cleans the "from" name to allow NPCs to be used as the message sender.

==09/06/2010==
Trevius: Added to Perl Mob: SetSlotTint(material_slot, red_tint, green_tint, blue_tint).
Trevius: Added to Perl Mob: WearChange(material_slot, texture, color).
Trevius: Added to Perl Mob: GetArmorTint(material_slot).
Trevius: Changed EVENT_COMBAT to now export the normal client variables when combat state changes to 1.

==08/28/2010==
Derision: Fixed potential buffer overrun in item_struct. NOTE: Linux users may have to increase shmmax.